# esp32-emu-turbo

./: .claudeignore  .gitignore  .gitmodules  404.html  CLAUDE.md  Makefile  README.md  docker-compose.retro-go.yml  docker-compose.yml  docs-drc-gap-analysis.md  docs.html  hardware-audit-bugs.md  index.html  markdown-page.html  package-lock.json  package.json  sitemap.xml  viewer.html
.claude/: README.md  scout-state.json  settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: cad-engineer.md  pcb-engineer.md  plan-reviewer.md  scout.md  software-dev.md  team-lead.md
.claude/commands/: bootstrap-new-pcb.md  design-pcb.md  fix-pcb.md  generate-pcb.md  release-pcb.md  verify-pcb.md
.claude/hooks/: check-claudeignore.sh  context-bundle-builder.py  enforce-script-failure-report.sh  post-edit-pcb-remind.sh  (+7 more)
.githooks/: pre-commit
.husky/: pre-commit
docs/: components.html  enclosure.html  feasibility.html  getting-started.md  lifecycle.md  prototyping.html  schematics.html  skill-anatomy.md  snes-hardware.html
hardware/: datasheet_specs.py
release_jlcpcb/: README.md  bom-summary.md  bom.csv  cpl.csv  cpl_u5_rot0.csv  cpl_u5_rot180.csv  cpl_u5_rot270.csv  cpl_u5_rot90.csv  esp32-emu-turbo.d356  esp32-emu-turbo.kicad_pcb
scripts/: .pcb_cache.json  analyze_pad_distances.py  drc_baseline.json  drc_check.py  drc_native.py  erc_check.py  export-gerbers-fast.sh  export-gerbers.sh  external-dfm.sh  fast-check.sh  generate-schematic.py  generate_board_config.py  generate_hw_tests.py  generate_ibom.sh  inject-3d-models.py  jlcpcb_parts.py  kicad_fill_zones.py  net_classifier.py  pcb_cache.py  pcb_optimize.py  pcb_review.py  qemu-run.sh  render-all.sh  render-enclosure.sh  render-schematics.sh  render_pcb_animation.py  render_pcb_svg.py  setup-sdcard.sh  short_circuit_analysis.py  sim-run.sh  simulate_circuit.py  spice_power_check.py  task-stats.sh  task-timer.sh  test_pcb_connectivity.py  update_component.py  validate_jlcpcb.py  validate_skills.py  verify_antenna_keepout.py  verify_battery_protection.py  (+43 more)
software/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
software/benchmark/main/: CMakeLists.txt  bench.h  bench_gb.c  bench_main.c  bench_nes.c  bench_pce.c  bench_sms.c  bench_snes.c  idf_component.yml  qemu_display.c
software/main/: CMakeLists.txt  audio.c  audio.h  board_config.h  display.c  display.h  idf_component.yml  input.c  input.h  main.c  power.c  power.h  sdcard.c  sdcard.h
test-roms/: README.md
website/: docusaurus.config.ts  package-lock.json
(+316 files in other folders)
