idf_component_register(
    SRCS
        "main.c"
        "display.c"
        "input.c"
        "sdcard.c"
        "audio.c"
        "power.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_lcd
        esp_driver_i2s
        esp_driver_spi
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_ledc
        esp_timer
        sdmmc
        fatfs
        vfs
)
